# hoi4_utils

./: .gitignore  Cargo.toml  README.md
parse/: Cargo.toml
parse/src/: definition.rs  lib.rs  validate.rs
paths/: Cargo.toml
paths/src/: lib.rs
province_scraper/: Cargo.toml  README.md
province_scraper/src/: main.rs
province_sniper/: Cargo.toml  README.md
province_sniper/src/: main.rs
province_welder/: Cargo.toml
province_welder/src/: main.rs
state_bouncer/: Cargo.toml  README.md
state_bouncer/src/: main.rs
