[package]
name = "state_bouncer"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
util_macros = { git = "https://github.com/ScottyThePilot/util_macros" }
notify = "4.0"
paths = { path = "../paths" }
regex = "1.4"
ctrlc = "3.1"
